fix: remove project filter buttons styling and adjust project title alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -304,13 +304,6 @@ img {
   color: #222;
 }
 
-.project-filter-buttons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  margin-bottom: 30px;
-}
 
 .project-title {
   font-weight: bold;
@@ -323,7 +316,7 @@ img {
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
-          justify-content: space-between;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -452,9 +445,9 @@ a {
   margin-top: 80px;
 }
 
-.head-inner-wrap {
+/* .head-inner-wrap {
   
-}
+} */
 
 .bottom-link {
   margin: 0 5px;
